# pyretechnics

./: .dir-locals.el  .gitignore  CHANGELOG.md  DEVELOPMENT_HOWTO.md  OPTIMIZATION_HOWTO.md  README.md  README.multiprocessing.md  README.org  channels.scm  guix.scm  make.sh  pyproject.toml  requirements.txt  setup.py  val-user-stories.org
.guix/modules/: python-pyretechnics-package.scm
doc/: pyretechnics-base.css  pyretechnics-custom.css  pyretechnics.css  pyretechnics.html
docs/: index.html  pyretechnics-base.css  pyretechnics-custom.css
org/: PyreFire.org  Pyretechnics.org  Pyrotechniques.org  detangle.el  eval.el  pics  pyretechnics.org  tangle.el  weave.el
prof/: spread_fire.py  spread_fire_dask.py  spread_fire_multiprocessing.py  spread_fire_multiprocessing_init_worker.py  spread_fire_multiprocessing_no_shared_mem.py  spread_fire_multithreading.py  spread_fire_ray_core_with_put.py  spread_fire_ray_multiprocessing.py  spread_fire_ray_multiprocessing_with_put.py
src/pyrefire/compute_np/: compute_cy.c  compute_infer_types.pyx  compute_memview.pyx  compute_typed.pyx  input_data.py  timings.py
src/pyrefire/first_test/: runner.py
src/pyretechnics/: __init__.c  array_grid3d.py  burn_cells.c  burn_cells.pxd  burn_cells.py  conversion.c  conversion.pxd  conversion.py  crown_fire.c  crown_fire.pxd  crown_fire.py  cy_types.pxd  eulerian_level_set.c  eulerian_level_set.pxd  eulerian_level_set.py  fire_spread.c  fire_spread.py  fuel_models.c  fuel_models.pxd  fuel_models.py  lazy_array.py  load_landfire.c  load_landfire.py  math.pxd  narrow_band_tracking.pxd  narrow_band_tracking.py  py_types.py  random.pxd  random.py  space_time_cube.c  space_time_cube.pxd  space_time_cube.py  spot_fire.c  spot_fire.pxd  spot_fire.py  suppression.py  surface_fire.c  surface_fire.pxd  surface_fire.py  surface_fire1.pxd  (+6 more)
src/pyretechnics/cython_examples/compute_np/: compute_contiguous.c  compute_contiguous.pyx  compute_cy.pyx  compute_infer_types.c  compute_memview.c  compute_typed.c
src/pyrotechniques/: fire_spread.py
src/pyrotechniques/cython_examples/compute_np/: compute_numpy.py  compute_unsafe.c  compute_unsafe.pyx
src/pyrotechniques/cython_examples/first_test/: test_cython.py  test_cython.pyx
test/data/LF2020_Asp_220_CONUS/: LC20_Asp_220.tif  LC20_Asp_220.tif.vat.dbf  metadata.html  metadata.xml
test/data/LF2020_Elev_220_CONUS/: LC20_Elev_220.tif  LC20_Elev_220.tif.aux.xml  LC20_Elev_220.tif.ovr  metadata.dbf  metadata.html
test/data/LF2020_SlpP_220_CONUS/: LC20_SlpP_220.tif.ovr  LC20_SlpP_220.tif.vat.dbf  metadata.html
test/data/LF2022_CBD_230_CONUS/: LC22_CBD_230.tif.ovr  LC22_CBD_230.tif.vat.dbf  LF22_CBD_230.dbf  metadata.html  metadata.xml  output_parameters.txt
test/data/LF2022_CBH_230_CONUS/: LC22_CBH_230.tif  LC22_CBH_230.tif.ovr  metadata.html
test/data/LF2022_CC_230_CONUS/: LC22_CC_230.tif  LC22_CC_230.tif.ovr
test/data/LF2022_CH_230_CONUS/: LC22_CH_230.tfw  LC22_CH_230.tif  LC22_CH_230.tif.ovr  LF22_CH_230.dbf  metadata.html  metadata.xml
test/data/LF2022_FBFM13_230_CONUS/: LC22_F13_230.GeoJSON  LC22_F13_230.tif  LC22_F13_230.tif.vat.dbf  metadata.dbf  metadata.html  metadata.shx  metadata.xml
test/data/LF2022_FBFM40_230_CONUS/: LC22_F40_230.tif.aux.xml  LC22_F40_230.tif.ovr  LF22_F40_230.dbf  metadata.html  metadata.xml
test/data/flammap_outputs/: FLI_BTU_ft-s.tif  FLI_BTU_ft-s.tif.aux.xml  FL_ft.tif  FL_ft.tif.aux.xml  ROS_ch_hr.tif  ROS_ch_hr.tif.aux.xml  fire_type.tif  fire_type.tif.aux.xml  horizontal_movement_rate_ft_min.tif  horizontal_movement_rate_ft_min.tif.aux.xml  max_spread_direction_radians.tif  max_spread_direction_radians.tif.aux.xml  run1_log.txt
test/data/landfire_inputs/LF2020_Asp_220_CONUS/: LC20_Asp_220.tif.aux.xml  LC20_Asp_220.tif.ovr
test/data/landfire_inputs/LF2020_Elev_220_CONUS/: LC20_Elev_220.tif.vat.dbf  metadata.xml
test/data/landfire_inputs/LF2020_SlpP_220_CONUS/: LC20_SlpP_220.tif  LC20_SlpP_220.tif.aux.xml  metadata.dbf  metadata.xml
test/data/landfire_inputs/LF2022_CBD_230_CONUS/: LC22_CBD_230.tif  LC22_CBD_230.tif.aux.xml
test/data/landfire_inputs/LF2022_CBH_230_CONUS/: LC22_CBH_230.tif.aux.xml  LC22_CBH_230.tif.vat.dbf  LF22_CBH_230.dbf  metadata.xml
test/data/landfire_inputs/LF2022_CC_230_CONUS/: LC22_CC_230.tif.aux.xml  LC22_CC_230.tif.vat.dbf  metadata.html  metadata.xml
test/data/landfire_inputs/LF2022_CH_230_CONUS/: LC22_CH_230.tif.aux.xml  LC22_CH_230.tif.vat.dbf  metadata.shp
test/data/landfire_inputs/LF2022_FBFM13_230_CONUS/: LC22_F13_230.tif.ovr
test/data/landfire_inputs/LF2022_FBFM40_230_CONUS/: LC22_F40_230.tif  LC22_F40_230.tif.vat.dbf
test/pyretechnics/: burn_cells_test.py  lazy_array_test.py  load_landfire.py
test/pyretechnics_test/: test_burn_cells.py  test_lazy_array.py  test_space_time_cube.py
test/pyrotechniques/: lazy_array_test.py
